--- a/src/main/resources/templates/directory.html
+++ b/src/main/resources/templates/directory.html
@@ -23,19 +23,11 @@
 </head>
 
 <!-- NAVBAR -->
-<header class="site-navbar m-3" >
-    <div class="site-mobile-menu site-navbar-target">
-        <div class="site-mobile-menu-header">
-            <div class="site-mobile-menu-close" id="mobile-close">
-                <span class="fa fa-arrow-right js-menu-toggle"></span>
-            </div>
-        </div>
-        <div class="site-mobile-menu-body"></div>
-    </div> <!-- .site-mobile-menu -->
+<header class="site-navbar mt-3">
+    <div class="container-fluid">
 
-    <div class="container-fluid " >
         <div class="row align-items-center">
-            <div class="site-logo col-3 pt-3 "><a id="title-anchor" href="/" style="color: #1e7e34">Italian Citizenship Reviews</a>
+            <div class="site-logo col-3 pt-3 "><a id="title-anchor" style="color: #1c7430" href="/">Italian Citizenship Reviews</a>
 
             </div>
             <nav class="site-navigation flex-md-row">
@@ -48,17 +40,18 @@
                             <i class="fas fa-user-circle"></i>
                         </a>
                     </li>
-                    <li><a class="" href="about.html"><b>About</b></a></li>
+
                     <li class="has-children">
                         <a href="/service-provider/all" ><b> Services </b> </a>
                         <ul class="dropdown">
-                            <li><a href="">Translation Service</a></li>
-                            <li><a href="">Application Assistance</a></li>
-                            <li><a href="">Genealogical Research</a></li>
-                            <li><a href="">Legal Guidance</a></li>
-                            <li><a href="">Full Service</a></li>
+                            <li><a href="/service-provider/filter/service/Translation Service">Translation Service</a></li>
+                            <li><a href="/service-provider/filter/service/Application Assistance">Application Assistance</a></li>
+                            <li><a href="/service-provider/filter/service/Genealogical Research">Genealogical Research</a></li>
+                            <li><a href="/service-provider/filter/service/Legal Guidance">Legal Guidance</a></li>
+                            <li><a href="/service-provider/filter/service/Full Service">Full Service</a></li>
                         </ul>
                     </li>
+                    <li><a href="#benefits"><b>Benefits</b></a></li>
                     <li class="d-md-none"><a href="/logout" th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}">Logout</a>
                         <a th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" href="/login"> Login</a></li>
 
@@ -84,17 +77,10 @@
                 </div>
 
                 <a href="#" class="site-menu-toggle js-menu-toggle d-inline-block mt-lg-2 ml-3"><span
-                        class="fa fa-bars h3 m-0 p-0 mt-2" id="hamburger"></span></a>
+                        class="fa fa-bars h3 m-0 p-0 mt-2" id="hamburger" style="color: white"></span></a>
             </div>
         </div>
     </div>
-    <style>
-        .sticky-header {
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-    </style>
 </header>
 
 <body>
@@ -131,7 +117,7 @@
                                 <div class="row">
                                     <input type="hidden" th:id="'serviceProvider-' + ${stat.index}" th:value="${serviceProvider.serviceProviderId}" />
                                     <div class="col-lg-3">
-                                        <img src="https://italymondo-wagtail.s3.amazonaws.com/media/documents/italymondo-blue-logo.svg" alt="" class="hotel-img">
+                                        <img th:src="${serviceProvider.logoUrl}" alt="Service Provider Logo" class="img-fluid">
                                     </div>
                                     <div class="col-lg-9">
 
@@ -226,7 +212,9 @@
                                     </div>
                                 </div>
                                 <div class="d-flex justify-content-end mt-1">
-                                    <div class="btn btn-primary text-uppercase">Contact</div>
+                                    <a th:href="'mailto:' + ${serviceProvider.email} + '?cc=tony@tonguebit.com'">
+                                        <div class="btn btn-primary text-uppercase">Contact</div>
+                                    </a>
                                 </div>
                             </div>
 
@@ -256,7 +244,7 @@
                 <!-- Grid column -->
                 <div class="col-md-2">
                     <h6 class="text-uppercase font-weight-bold">
-                        <a href="#!" class="text-white">About us</a>
+                        <a href="/" class="text-white">Home</a>
                     </h6>
                 </div>
                 <!-- Grid column -->
@@ -264,7 +252,7 @@
                 <!-- Grid column -->
                 <div class="col-md-2">
                     <h6 class="text-uppercase font-weight-bold">
-                        <a href="#!" class="text-white">Products</a>
+                        <a href="/login" class="text-white">Login</a>
                     </h6>
                 </div>
                 <!-- Grid column -->
@@ -272,7 +260,7 @@
                 <!-- Grid column -->
                 <div class="col-md-2">
                     <h6 class="text-uppercase font-weight-bold">
-                        <a href="#!" class="text-white">Awards</a>
+                        <a href="/service-provider/all" class="text-white">Services</a>
                     </h6>
                 </div>
                 <!-- Grid column -->
@@ -280,7 +268,7 @@
                 <!-- Grid column -->
                 <div class="col-md-2">
                     <h6 class="text-uppercase font-weight-bold">
-                        <a href="#!" class="text-white">Help</a>
+                        <a href="#https://conslondra.esteri.it/en/servizi-consolari-e-visti/servizi-per-il-cittadino-straniero/cittadinanza/cittadinanza-per-discendenza/" class="text-white">Help</a>
                     </h6>
                 </div>
                 <!-- Grid column -->
@@ -288,8 +276,7 @@
                 <!-- Grid column -->
                 <div class="col-md-2">
                     <h6 class="text-uppercase font-weight-bold">
-                        <a href="#!" class="text-white">Contact</a>
-                    </h6>
+                        <a href="mailto:tony@tonguebit.com" class="text-white">Contact</a></h6>
                 </div>
                 <!-- Grid column -->
             </div>
@@ -300,14 +287,17 @@
         <hr class="my-5"/>
 
         <!-- Section: Text -->
-        <section class="mb-3">
+        <section class="mb-5">
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-8">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-                        distinctio earum repellat quaerat voluptatibus placeat nam,
-                        commodi optio pariatur est quia magnam eum harum corrupti
-                        dicta, aliquam sequi voluptate quas.
+                        Italian Citizenship Reviews is a platform dedicated to assisting individuals in their pursuit of
+                        Italian citizenship. It provides a collection of user-generated reviews and ratings for various
+                        service providers involved in the citizenship application process. Users can find valuable
+                        insights and feedback from others who have gone through the process. With a range of filters and
+                        attributes, users can easily find relevant reviews. The platform aims to empower users with the
+                        necessary information to make informed decisions when choosing service providers for their
+                        Italian citizenship journey.
                     </p>
                 </div>
             </div>
@@ -315,7 +305,7 @@
         <!-- Section: Text -->
 
         <!-- Section: Social -->
-        <section class="text-center mb-3">
+        <section class="text-center mb-5">
             <a href="" class="text-white me-4">
                 <i class="fab fa-facebook-f"></i>
             </a>
@@ -345,6 +335,7 @@
             style="background-color: rgba(0, 0, 0, 0.2)"
     >
         © 2023 Copyright:
+        <p>For inquiries, please contact us at <a href="mailto:tony@tonguebit.com">tony@tonguebit.com</a>.</p>
 
     </div>
 </footer>
