--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -101,7 +101,7 @@
     <section class="pt-5 ">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 offset-md-2 text-center">
+                <div class="col-md-8 offset-md-2 text-center mb-3">
                     <h1 style="font-family: Italiana; text-align: center; margin-top: 20px; color: #1e7e34 ">Find the best Italian Citizenship Service Providers</h1>
                     <div class="mb-4">
                         <h5><b>Experience A Seamless Journey to Italian Citizenship</b></h5>
