fixed mobile menu

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -21,6 +21,14 @@
 
   <title>Italian Citizenship Reviews</title>
 </head>
+<div class="site-mobile-menu site-navbar-target">
+  <div class="site-mobile-menu-header">
+    <div class="site-mobile-menu-close" id="mobile-close">
+      <span class="fa fa-arrow-right js-menu-toggle"></span>
+    </div>
+  </div>
+  <div class="site-mobile-menu-body"></div>
+</div> <!-- .site-mobile-menu -->
 <!-- NAVBAR -->
 <header class="site-navbar mt-3">
   <div class="container-fluid">
@@ -76,7 +84,7 @@
         </div>
 
         <a href="#" class="site-menu-toggle js-menu-toggle d-inline-block mt-lg-2 ml-3"><span
-                class="fa fa-bars h3 m-0 p-0 mt-2" id="hamburger" style="color: white"></span></a>
+                class="fa fa-bars h3 m-0 p-0 mt-2" id="hamburger"></span></a>
       </div>
     </div>
   </div>
