--- a/src/main/resources/templates/service-provider-register.html
+++ b/src/main/resources/templates/service-provider-register.html
@@ -21,7 +21,15 @@
 
     <title>Italian Citizenship Reviews</title>
 </head>
-
+<body>
+<div class="site-mobile-menu site-navbar-target">
+    <div class="site-mobile-menu-header">
+        <div class="site-mobile-menu-close" id="mobile-close">
+            <span class="fa fa-arrow-right js-menu-toggle"></span>
+        </div>
+    </div>
+    <div class="site-mobile-menu-body"></div>
+</div> <!-- .site-mobile-menu -->
 <!-- NAVBAR -->
 <header class="site-navbar mt-3">
     <div class="container-fluid">
@@ -82,7 +90,6 @@
         </div>
     </div>
 </header>
-<body >
 <div class="bg-light p-2 form-group" style="margin-top: 100px;">
 
     <form action="/service-provider/register" method="post">
