--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -20,7 +20,15 @@
 
     <title>Italian Citizenship Reviews</title>
 </head>
-
+<body>
+<div class="site-mobile-menu site-navbar-target">
+    <div class="site-mobile-menu-header">
+        <div class="site-mobile-menu-close" id="mobile-close">
+            <span class="fa fa-arrow-right js-menu-toggle"></span>
+        </div>
+    </div>
+    <div class="site-mobile-menu-body"></div>
+</div> <!-- .site-mobile-menu -->
 <!-- NAVBAR -->
 <header class="site-navbar mt-3">
     <div class="container-fluid">
@@ -81,8 +89,6 @@
         </div>
     </div>
 </header>
-
-<body>
 <div class="container">
     <div id="content" style="margin-top: 125px;">
         <div style="margin-top: 100px">
