fixed login page mobile menu

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
 
     <title>Italian Citizenship Reviews</title>
 </head>
-<main>
+<body>
     <div class="site-mobile-menu site-navbar-target">
         <div class="site-mobile-menu-header">
             <div class="site-mobile-menu-close" id="mobile-close">
@@ -149,13 +149,7 @@
             </div>
         </div>
     </section>
-
-
-
-
-
-
-</main>
+</body>
 <footer class="text-center text-white" style="background-color: #1e7e34">
     <!-- Grid container -->
     <div class="container">
