--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -936,7 +936,7 @@ select {
 @media (max-width: 767px) {
   .hero {
     height: 100vh;
-    background-size: 100% auto;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
   }
 }
