--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -936,9 +936,10 @@ select {
 @media (max-width: 767px) {
   .hero {
     height: 100vh;
-    background-size: 100% 100%;
+    background-size: cover;
     background-repeat: no-repeat;
   }
+
 }
 
 
