--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -936,11 +936,10 @@ select {
 @media (max-width: 767px) {
   .hero {
     height: 100vh;
-    width: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
   }
-
+ git
 }
 
 
