--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -46,6 +46,14 @@ a {
   height: 100vh;
   width: 100%;
   background-size: cover;
+  background-attachment: fixed;
+  background-position: right center;
+}
+
+#hero {
+  height: 100vh;
+  width: 100%;
+  background-size: cover;
   background-position: right center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -934,12 +942,12 @@ select {
 }
 
 @media (max-width: 767px) {
-  .hero {
+  #hero {
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
   }
- git
+
 }
 
 
