--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -91,8 +91,8 @@
             </div>
         </div>
     </header>
-    <section id="hero">
-        <div class="hero" style="background-image: url('/images/italy.jpg');">
+    <section id="hero" style="background-image: url('/images/italy.jpg');">
+        <div class="hero" >
             <div class="hero-content">
                 <h1 class="hero-headline">Find top-rated pros for becoming an Italian citizen.</h1>
             </div>
