--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,12 +15,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="icon" href="/images/logo.png">
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 
-    <title>Italian Citizenship Reviews</title>
+    <title>Italian Citizenship Review</title>
 </head>
-<main>
+<body>
     <div class="site-mobile-menu site-navbar-target">
         <div class="site-mobile-menu-header">
             <div class="site-mobile-menu-close" id="mobile-close">
@@ -34,14 +36,18 @@
 <!-- NAVBAR -->
     <header class="site-navbar mt-3">
         <div class="container-fluid">
-
             <div class="row align-items-center">
-                <div class="site-logo col-3 pt-3 "><a id="title-anchor" href="/">Italian Citizenship Reviews</a>
+                <div class="site-logo d-flex col-3 pt-3 ">
+                    <a href="/"><img src="/images/logo.png" class="p-2" style="max-width: 100px;"/></a>
+
+                    <a id="title-anchor" href="/"> Italian Citizenship Review</a>
 
                 </div>
                 <nav class="site-navigation flex-md-row">
+
                     <ul class="site-menu js-clone-nav d-none d-xl-block ml-0 pl-0">
                         <li id="dashboard-button" class="d-md-none">
+
                             <a th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" href="/user/dashboard/admin/" class="btn btn-primary border-width-2 ">Admin Dashboard
 
                             </a>
@@ -123,7 +129,7 @@
         <div class="pt-5">
             <div class="row d-flex justify-content-center">
                 <div class="col-md-10 col-xl-8 text-center ">
-                    <h1 class="fw-bold mb-4" id="header">Highest-Rated Service Providers</h1>
+                    <h1 class="fw-bold mb-4 p-1" id="header">Highest-Rated Service Providers</h1>
                 </div>
             </div>
 
@@ -920,7 +926,7 @@
 
 
 
-</main>
+</body>
 
 
 <footer class="text-center text-white" style="background-color: #1e7e34">
@@ -979,15 +985,11 @@
         <section class="mb-5">
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-8">
-                    <p>
-                        Italian Citizenship Reviews is a platform dedicated to assisting individuals in their pursuit of
-                        Italian citizenship. It provides a collection of user-generated reviews and ratings for various
-                        service providers involved in the citizenship application process. Users can find valuable
-                        insights and feedback from others who have gone through the process. With a range of filters and
-                        attributes, users can easily find relevant reviews. The platform aims to empower users with the
-                        necessary information to make informed decisions when choosing service providers for their
-                        Italian citizenship journey.
-                    </p>
+                    <a href="/"><img src="/images/logo.png"  alt="Your Logo" style="max-width: 100px;"/></a>
+
+                    <h5>
+                        From Reviews to Recognition: Italian Citizenship Made Easy!
+                    </h5>
                 </div>
             </div>
         </section>
