--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,10 +16,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="icon" href="/images/logo.png">
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 
-    <title>Italian Citizenship Reviews</title>
+    <title style="color: #1c7430">Italian Citizenship Review</title>
 </head>
 <body>
     <div class="site-mobile-menu site-navbar-target">
@@ -35,7 +37,10 @@
     <div class="container-fluid">
 
         <div class="row align-items-center">
-            <div class="site-logo col-3 pt-3 "><a id="title-anchor" style="color: #1c7430" href="/">Italian Citizenship Reviews</a>
+            <div class="site-logo d-flex col-3 pt-3 ">
+                <a href="/"><img src="/images/logo.png" class="p-2" style="max-width: 100px;"/></a>
+
+                <a id="title-anchor" href="/" style="color: #1c7430"> Italian Citizenship Review</a>
 
             </div>
             <nav class="site-navigation flex-md-row">
@@ -205,15 +210,11 @@
         <section class="mb-5">
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-8">
-                    <p>
-                        Italian Citizenship Reviews is a platform dedicated to assisting individuals in their pursuit of
-                        Italian citizenship. It provides a collection of user-generated reviews and ratings for various
-                        service providers involved in the citizenship application process. Users can find valuable
-                        insights and feedback from others who have gone through the process. With a range of filters and
-                        attributes, users can easily find relevant reviews. The platform aims to empower users with the
-                        necessary information to make informed decisions when choosing service providers for their
-                        Italian citizenship journey.
-                    </p>
+                    <a href="/"><img src="/images/logo.png"  alt="Your Logo" style="max-width: 100px;"/></a>
+
+                    <h5>
+                        From Reviews to Recognition: Italian Citizenship Made Easy!
+                    </h5>
                 </div>
             </div>
         </section>
