fixed index.html hamburger

--- a/src/main/resources/templates/directory.html
+++ b/src/main/resources/templates/directory.html
@@ -356,4 +356,6 @@
 <script src="/js/jquery.sticky.js"></script>
 <script src="/js/main.js"></script>
 <script src="/js/directory.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </html>
