--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
 
     <title>Italian Citizenship Review</title>
 </head>
-<body>
+<main>
     <div class="site-mobile-menu site-navbar-target">
         <div class="site-mobile-menu-header">
             <div class="site-mobile-menu-close" id="mobile-close">
@@ -926,7 +926,7 @@
 
 
 
-</body>
+</main>
 
 
 <footer class="text-center text-white" style="background-color: #1e7e34">
@@ -1030,8 +1030,6 @@
 
     </div>
 </footer>
-
-    </body>
         <script src="/js/directory.js"></script>
         <script src="/js/index.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
