--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -97,27 +97,27 @@
             </div>
         </div>
     </header>
-    <section id="hero" style="background-image: url('/images/italy.jpg');">
+    <section id="hero" style="background-image: url('/images/italy.jpg');" >
         <div class="hero" >
             <div class="hero-content">
-                <h1 class="hero-headline">Find top-rated pros for becoming an Italian citizen.</h1>
+                <h1 class="hero-headline" >Find top-rated pros for becoming an Italian citizen.</h1>
             </div>
         </div>
     </section>
-    <section class="pt-5 ">
+    <section class="p-5 ">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center mb-3">
-                    <h1 style="font-family: Italiana; text-align: center; margin-top: 20px; color: #1e7e34 ">Find the best Italian Citizenship Service Providers</h1>
+                    <h1 style="font-size: 50px;line-height: 60px;margin-bottom: 20px;font-weight: 900; font-family: Italiana; color: #1e7e34">Find the best Italian Citizenship Service Providers</h1>
                     <div class="mb-4">
                         <h5><b>Experience A Seamless Journey to Italian Citizenship</b></h5>
                         <p>
                             Our goal is to provide transparency in the complicated process of becoming an Italian citizen by connecting you with the best in the business service providers.                        </p>
                         </p>
                     </div>
-                    <div>
-                        <a href="/login"  class="btn btn-primary btn-lg me-3">Register Now</a>
-                        <a href="#qualify" class="btn btn-outline-primary btn-lg">Learn More</a>
+                    <div >
+                        <a href="/login"  class="btn btn-primary btn-lg me-3 p-1">Register Now</a>
+                        <a href="#qualify" class="btn btn-outline-primary btn-lg p-1" >Learn More</a>
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
         <div class="pt-5">
             <div class="row d-flex justify-content-center">
                 <div class="col-md-10 col-xl-8 text-center ">
-                    <h1 class="fw-bold mb-4 p-1" id="header">Highest-Rated Service Providers</h1>
+                    <h1 class="fw-bold mb-4 p-1" id="header" style="font-size: 60px;line-height: 60px;margin-bottom: 20px;font-weight: 900; font-family: Italiana">Highest-Rated Service Providers</h1>
                 </div>
             </div>
 
@@ -274,7 +274,7 @@
                 <div class="px-4">
                     <div class="row d-flex justify-content-center ">
                         <div class="col-md-10 col-xl-8 text-center">
-                            <h1 class="process-box " style="color: #1e7e34; font-family: Italiana" >How to become an Italian Citizen in 3 steps</h1>
+                            <h1 class="process-box " style="color: #1e7e34; font-family: Italiana; font-weight: 900" >How to become an Italian Citizen in 3 steps</h1>
                         </div>
                     </div>
                 </div>
@@ -808,7 +808,7 @@
     </section>
     <section id="benefits" class="pt-5" style="color: #000; background-color: #f3f2f2;">
         <div class="container">
-            <h1 id="title-benefits" class="w-90 text-center " >Unlock the Benefits of
+            <h1 id="title-benefits" class="w-90 text-center "  style="font-size: 60px;line-height: 60px;margin-bottom: 20px;font-weight: 900; font-family: Italiana">Unlock the Benefits of
                 Italian Citizenship</h1>
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
