added register to login button?

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -64,7 +64,7 @@
             </ul>
           </li>
           <li class="d-md-none"><a href="/logout" th:if="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}">Logout</a>
-            <a th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" href="/login"> Login</a></li>
+            <a th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" href="/login"> Login/Register</a></li>
 
         </ul>
       </nav>
@@ -83,7 +83,7 @@
 
 
           <a th:unless="${#vars.request.isUserInRole('ROLE_USER') || #vars.request.isUserInRole('ROLE_ADMIN')}" class="btn btn-primary border-width-2 d-none d-md-inline-block" href="/login">
-            Login
+            Login or Register
           </a>
         </div>
 
