fixed load more button

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -137,9 +137,8 @@
                 <div class="col-md-4 mb-4 mb-md-1">
                     <div class="card" id="card-1">
                         <div class="card-body py-4 mt-2">
-                            <h2 class="d-flex justify-content-center mb-4 font-weight-bold" style="font-family: Italiana">
+                            <h2 class="d-flex justify-content-center mb-4 font-weight-bold title" style="font-family: Italiana">
                             </h2>
-                            <h5 class="service-provider-name"></h5>
                             <h5 class=" rating"></h5>
 
                             <p class="mb-2"><i class="fas fa-quote-left pe-2"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.</p>
@@ -150,9 +149,8 @@
                 <div class="col-md-4 mb-4 mb-md-0">
                     <div class="card" id="card-2">
                         <div class="card-body py-4 mt-2">
-                            <h2 class="d-flex justify-content-center mb-4 font-weight-bold" style="font-family: Italiana">
+                            <h2 class="d-flex justify-content-center mb-4 font-weight-bold title" style="font-family: Italiana">
                             </h2>
-                            <h5 >Teresa May</h5>
                             <h5 class="font-weight-bold my-3 rating">Founder at ET Company</h5>
                             <ul class="list-unstyled d-flex justify-content-center ">
                             </ul>
@@ -165,9 +163,8 @@
                 <div class="col-md-4 mb-0">
                     <div class="card " id="card-3">
                         <div class="card-body py-4 mt-2">
-                            <h2 class="d-flex justify-content-center mb-4 font-weight-bold" style="font-family: Italiana">
+                            <h2 class="d-flex justify-content-center mb-4 font-weight-bold title" style="font-family: Italiana">
                             </h2>
-                            <h5 >Teresa May</h5>
                             <h5 class="font-weight-bold my-3 rating">Founder at ET Company</h5>
                             <ul class="list-unstyled d-flex justify-content-center ">
                             </ul>
