--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -125,8 +125,8 @@
           <h6><b><span th:text="${review.title}"></span></b></h6>
           <p class="rating" th:text="${review.rating}"><b></b></p>
           <p><span th:text="${review.content}"></span></p>
-            <form th:action="@{'/review/' + ${review.reviewId}}" method="post">
-              <button th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" type="submit" class="btn btn-primary">Delete review</button>
+            <form  >
+              <a th:action="@{'/review/' + ${review.reviewId}}" th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" class="btn btn-primary">Delete review</a>
               <a th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" th:href="@{/user/dashboard/{userId}(userId=${review.userId})}" class="btn btn-primary">Go to User</a>
             </form>
             <form th:action="@{/review/approve/{reviewId}(reviewId=${review.reviewId})}" method="post" class="mt-3">
