--- a/src/main/resources/templates/service-provider.html
+++ b/src/main/resources/templates/service-provider.html
@@ -190,8 +190,8 @@
                             <p class="rating" th:text="${review.rating}"></p>
                             <p th:text="${review.date}"></p>
                             <p><span th:text="${review.content}"></span></p>
-                            <form th:action="@{'/review/' + ${review.reviewId}}" method="post">
-                              <button th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" type="submit" class="btn btn-primary">Delete review</button>
+                            <form  >
+                              <a th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" th:href="@{'/review/' + ${review.reviewId}}" class="btn btn-primary">Delete review</a>
                               <a th:if="${#vars.request.isUserInRole('ROLE_ADMIN')}" th:href="@{/user/dashboard/{userId}(userId=${review.userId})}" class="btn btn-primary">Go to User</a>
                             </form>
                           </div>
