fixed load more

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -136,7 +136,9 @@
             <div class="row text-center mx-2 justify-content-center" id="service-providers">
                 <div class="col-md-4 mb-4 mb-md-1">
                     <div class="card" id="card-1">
+
                         <div class="card-body py-4 mt-2">
+                            <img class="logo-img">
                             <h2 class="d-flex justify-content-center mb-4 font-weight-bold title" style="font-family: Italiana">
                             </h2>
                             <h5 class=" rating"></h5>
@@ -149,6 +151,8 @@
                 <div class="col-md-4 mb-4 mb-md-0">
                     <div class="card" id="card-2">
                         <div class="card-body py-4 mt-2">
+                            <img class="logo-img">
+
                             <h2 class="d-flex justify-content-center mb-4 font-weight-bold title" style="font-family: Italiana">
                             </h2>
                             <h5 class="font-weight-bold my-3 rating">Founder at ET Company</h5>
@@ -163,6 +167,8 @@
                 <div class="col-md-4 mb-0">
                     <div class="card " id="card-3">
                         <div class="card-body py-4 mt-2">
+                            <img class="logo-img">
+
                             <h2 class="d-flex justify-content-center mb-4 font-weight-bold title" style="font-family: Italiana">
                             </h2>
                             <h5 class="font-weight-bold my-3 rating">Founder at ET Company</h5>
